[package]
name = "linkage"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = "0.14"
anyhow = "1.0"
goblin = "0.9"
libc = "0.2"
libloading = "0.8"
log = "0.4"
pretty_env_logger = "0.5"

[lib]
name = "linkage"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "linkage"
path = "src/main.rs"
